2008-06-30  Bastien Nocera  <hadess@hadess.net>

	* configure.ac: Remove "--resume" check
	* gnome_lirc_properties/backend.py: Remove use of the "--resume"
	flag for irrecord flags, as irrecord correctly resumes sessions
	from lirc 0.8.4 onwards (Closes: #536811)

2008-06-30  Bastien Nocera  <hadess@hadess.net>

	* configure.ac: Check for lirc 0.8.4 and require it
	* gnome_lirc_properties/backend.py: Fix include statement's
	syntax, it's enclosed in "<>" now
	* gnome_lirc_properties/lirc.py: Remove can_include check,
	all the lircs past 0.8.4 can support it

	* gnome_lirc_properties/Makefile.am:
	* gnome_lirc_properties/config.py.in:
	* gnome_lirc_properties/lsb.py: Remove use of lsb version checks,
	as we now require include support with a new enough lirc

	(Closes: #532606)

2008-06-30  Mathias Hasselmann  <mathias@openismus.com>

	Avoid TypeError with no receivers plugged in (#540900).

	* gnome_lirc_properties/ui/RemoteControlProperties.py
	 (RemoteControlProperties._unlock()):
	  Provide default value for parent_dialog argument.

2008-05-18  Mathias Hasselmann  <mathias@openismus.com>

	Don't add pure keyboards to the main window's receiver list, and use
	the input device's human readable name instead of its device node to
	configure input devices.

	* gnome_lirc_properties/hardware.py
	 (HalDevice.find_input_device(), HalDevice.has_capability(),
	  HalDevice.read_sysfs_file(), HalDevice.get_sysfs_path(),
	  HalDevice.is_real_keyboard(), HardwareManager._on_device_added(),
	  HardwareManager.__find_input_layer_receivers()): Use human readable
	  name instead of its device node to configure input devices. Add
	  HalDevice.has_capability() to conveniently check if a HAL device has
	  a certain HAL capability. Add functions to conveniently access sysfs
	  files associated with a HAL device. Move keyboard detection code
	  into a separate method. Don't emit 'receiver-added' signals for real
	  keyboards.

	* gnome_lirc_properties/ui/RemoteControlProperties.py